--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "fetch-mock": "^9.3.1",
     "lodash": "^4.17.15",
     "nodejs": "0.0.0",
     "react": "^16.12.0",
@@ -16,7 +17,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0",
+    "sinon": "^9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
