--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "fetch-mock": "^9.3.1",
     "lodash": "^4.17.15",
+    "node-fetch": "^2.6.0",
     "nodejs": "0.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -46,6 +46,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
+    "fetch-mock-jest": "^1.2.5",
     "json-server": "^0.16.1"
   },
   "jest": {
